--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -104,7 +104,7 @@
                                             <select id="ddlRegimenF" name="IdRegimenFiscal" class="form-control selectpicker z-index show-tick">
                                                 @foreach (var lstrf in ViewBag.RegimenFiscal)
                                                 {
-                                                    <option value="@lstrf.IdRegimenFiscal">@lstrf.Descripcion</option>
+                                                    <option value="1">General de Ley Personas Morales</option>
                                                 }
 
                                                 @*@{int x = 0;}*@
