--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -499,7 +499,7 @@
                                     <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>             
                                 </ul>
                             </li>
-                            <li>@Html.ActionLink("Centro de costos", "CentroCosto", "CentroCosto")</li>  
+                            <li>@Html.ActionLink("Centro de Costos", "CentroCosto", "CentroCosto")</li>  
                             <li>@Html.ActionLink("Cuenta Contable", "CuentaContable", "CuentaContable")</li>    
                             <li>@Html.ActionLink("Proveedor", "Proveedores", "Producto")</li>    
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
