--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
@@ -20,9 +20,21 @@
                 $(".filterable tr:visible .indexColumn:not(:contains('"
                    + this + "'))").parent().hide();
             });//each
-        });//key up.
+        });
+        $("#ddlEmpresas").change(UpdateEmpresas());
     });//document.ready
+    function UpdateEmpresas() {
+        var url = '/Producto/Producto'
+        $.ajax({
+            url: url,
+            data: { idempresa: $("ddlEmpresas").val },
+            type: 'GET',
+            datatype: 'json',
+            success: function (data) { alert(''); },
+            error: function () { alert('error'); }
+        });
 
+    }   
 </script>
 <div class="page-loader-wrapper">
     <div class="loader">
@@ -41,7 +53,7 @@
                         <h2>Producto</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item active">Producto / Producto</li>
+                            <li class="breadcrumb-item active">Catalogo / Producto</li>
                         </ul>
                     </div>
                 </div>
@@ -49,7 +61,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <h2><strong>Crear</strong> nueva Unidad de Medida</h2>
+                                <h2><strong>Crear</strong> nuevo producto</h2>
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
@@ -57,7 +69,8 @@
                                         <b>Gasera:</b>
                                         @if (ViewBag.EsAdmin)
                                         {
-                                            <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                            
+                                            <select id="ddlEmpresas" name="IdEmpresa" class="form-control selectpicker z-index show-tick" data-live-search="true">
                                                 @foreach (var lst in ViewBag.Empresas)
                                                 {
                                                     if (lst.IdEmpresa == Model.IdEmpresa)
@@ -91,7 +104,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <b>Cuenta contable:</b>
-                                            <select name="IdCuentaContable" class="form-control">
+                                            <select name="IdCuentaContable" class="form-control show-tick" data-live-search="true">
                                                 @foreach (var cc in ViewBag.CuentasContables)
                                                 {
                                                     if (cc.IdCuentaContable == Model.IdCuentaContable)
@@ -110,7 +123,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <b>Categorías:</b>
-                                            <select name="IdCategoria" class="form-control">
+                                            <select name="IdCategoria" class="form-control show-tick" data-live-search="true">
                                                 @foreach (var cc in ViewBag.Categorias)
                                                 {
                                                     if (cc.IdCategoria == Model.IdCategoria)
@@ -130,7 +143,7 @@
                                 <div class="row clearfix">
                                     <div class="col-md-6">
                                         <b>Linea de Productos:</b>
-                                        <select name="IdProductoLinea" class="form-control">
+                                        <select name="IdProductoLinea" class="form-control z-index show-tick" data-live-search="true">
                                             @foreach (var cc in ViewBag.LineasProducto)
                                             {
                                                 if (cc.IdProductoLinea == Model.IdProductoLinea)
@@ -147,7 +160,7 @@
                                     </div>
                                     <div class="col-md-2">
                                         <b>Unidad de medida:</b>
-                                        <select name="IdUnidadMedida" class="form-control">
+                                        <select name="IdUnidadMedida" class="form-control z-index show-tick" data-live-search="true">
                                             @foreach (var cc in ViewBag.UnidadesMedida)
                                             {
                                                 if (cc.IdUnidadMedida == Model.IdUnidadMedida)
@@ -164,7 +177,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <b>Unidad de medida alternativa: (Opcional)</b>
-                                        <select name="IdUnidadMedida2" class="form-control">
+                                        <select name="IdUnidadMedida2" class="form-control z-index show-tick" data-live-search="true">
                                             <option>Seleccione unidad </option>
                                             @foreach (var cc in ViewBag.UnidadesMedida2)
                                             {
@@ -183,8 +196,10 @@
                                 <div class="row clearfix">
                                     <div class="col-md-8">
                                         <b>Descripcion: </b>
-                                        @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", @Rows = 5 })
-                                        @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
+                                        <div class="blockquote blockquote-info btn-round">
+                                            @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", @Rows = 5 })
+                                            @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
+                                        </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
@@ -269,7 +284,7 @@
                                     <div class="col-sm-4">
                                         @if (ViewBag.EsAdmin)
                                         {
-                                            <select id="ddlEmpresasFilter" class="form-control show-tick" data-live-search="true">
+                                            <select id="ddlEmpresasFilter" class="form-control z-index show-tick" data-live-search="true">
                                                 @foreach (var lst in ViewBag.Empresas)
                                                 {
                                                     <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
