--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -7,22 +7,22 @@
 @{
     Layout = null;
 }
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-<!-- Custom Css -->
-<link rel="stylesheet" href="~/assets/css/main.css">
-<link rel="stylesheet" href="~/assets/css/color_skins.css">
-<link rel="stylesheet" href="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css">
-<!-- Bootstrap Select Css -->
-<link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
-<script src="~/assets/bundles/libscripts.bundle.js"></script>
-<script src="~/assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
+    <link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.min.css" />
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="~/assets/css/main.css">
+    <link rel="stylesheet" href="~/assets/css/color_skins.css">
+</head>
 
-@using (Html.BeginForm("Inicio", "Home", FormMethod.Post))
-{
-    <body class="theme-black">
-        <div class="authentication">
+<body class="theme-black">
+    <div class="authentication">
+        @using (Html.BeginForm("Inicio", "Home", FormMethod.Post))
+        {
             <div class="container">
                 <div class="col-md-12 content-center">
                     <div class="row">
@@ -49,24 +49,24 @@
                                 </div>
 
                                 <div class="from">
-                                        <div class="input-group">
-                                            <select name="IdEmpresa" class="form-control selectpicker z-index show-tick" data-live-search="true">
-                                                @foreach (var lst in Model.Empresas)
-                                                {
-                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                                }
-                                            </select>
-                                        </div>
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="usuario" name="Usuario" />
-                                            <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
-                                        </div>
-                                        <div class="input-group">
-                                            <input type="password" class="form-control" placeholder="Contraseña" name="Password" />
-                                            <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
-                                        </div>
-
+                                    <div class="input-group">
+                                        <select name="IdEmpresa" id="empresas" class="form-control selectpicker" data-live-search="true">
+                                            @foreach (var lst in Model.Empresas)
+                                            {
+                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            }
+                                        </select>
                                     </div>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" placeholder="usuario" name="Usuario" />
+                                        <span class="input-group-addon"><i class="zmdi zmdi-account-circle"></i></span>
+                                    </div>
+                                    <div class="input-group">
+                                        <input type="password" class="form-control" placeholder="Contraseña" name="Password" />
+                                        <span class="input-group-addon"><i class="zmdi zmdi-lock"></i></span>
+                                    </div>
+
+                                </div>
                                 <div class="footer">
                                     <input type="submit" value="Iniciar" class="btn btn-primary btn-round btn-block" />
                                 </div>
@@ -78,14 +78,20 @@
                                             <label id="lblMensajeError">@Model.Respuesta.Mensaje.ToString() </label>
                                         </div>
                                     }
-                                }                                
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </body>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/color_skins.css">
-}
+        }
+    </div>
+</body>
+</html>
+<script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+<script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
+
+@*<script src="~/assets/bundles/libscripts.bundle.js"></script>
+<script src="~/assets/bundles/vendorscripts.bundle.js"></script>  Lib Scripts Plugin Js*@
