--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -5,19 +5,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+
     <link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.min.css" />
+
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
 </head>
 <body class="theme-black menu_dark">
+    <div class="page-loader-wrapper">
+        <div class="loader">
+            <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+            <p>Espere por favor</p>
+        </div>
+    </div>
     @RenderBody()
     <div class="overlay_menu">
         <button class="btn btn-primary btn-icon btn-icon-mini btn-round"><i class="zmdi zmdi-close"></i></button>
         <div class="container">
             <div class="row clearfix">
                 <div class="card">
-                    <div class="body">
-                        @*@RenderBody()*@
+                    <div class="body">                        
                         <div class="input-group m-b-0">
                             <input type="text" class="form-control" placeholder="Search...">
                             <span class="input-group-addon">
@@ -35,7 +43,7 @@
                                     <li><a href="mail-inbox.html">Inbox</a></li>
                                     <li><a href="chat.html">Chat</a></li>
                                     <li><a href="events.html">Calendar</a></li>
-                                    <li><a href="file-dashboard.html">File Manager</a></li>
+                                    <li><a href="file-dashbord.html">File Manager</a></li>
                                     <li><a href="contact.html">Contact list</a></li>
                                 </ul>
                             </div>
@@ -496,12 +504,12 @@
                                     <li>@Html.ActionLink("Producto", "Producto", "Producto")</li>
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
                                     <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
-                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>             
+                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
                                 </ul>
                             </li>
-                            <li>@Html.ActionLink("Centro de Costos", "CentroCosto", "CentroCosto")</li>  
-                            <li>@Html.ActionLink("Cuenta Contable", "CuentaContable", "CuentaContable")</li>    
-                            <li>@Html.ActionLink("Proveedor", "Proveedores", "Producto")</li>    
+                            <li>@Html.ActionLink("Centro de Costos", "CentroCosto", "CentroCosto")</li>
+                            <li>@Html.ActionLink("Cuenta Contable", "CuentaContable", "CuentaContable")</li>
+                            <li>@Html.ActionLink("Proveedor", "Proveedores", "Producto")</li>
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                             <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
@@ -511,9 +519,14 @@
                 </ul>
             </div>
         </div>
-    </aside>
-    <script src="~/assets/bundles/libscripts.bundle.js"></script>
-    <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
-    <script src="~/assets/bundles/mainscripts.bundle.js"></script>
+    </aside>   
 </body>
 </html>
+<script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+<script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
+
+@*<script src="~/assets/bundles/libscripts.bundle.js"></script>*@
+<script src="~/assets/bundles/vendorscripts.bundle.js"></script>
+<script src="~/assets/bundles/mainscripts.bundle.js"></script>
