--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -58,7 +58,7 @@
 
             <div class="row clearfix">
                 <div class="col-lg-7 col-md-7 col-sm-12">
-                    <h3>&nbsp;Catálogo / Usuarios</h3>
+                    <h3>&nbsp;Catálogo / Clientes</h3>
                 </div>
             </div>
             <div class="card">
@@ -430,7 +430,7 @@
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-5">
                         <div class="form-group">
-                            <input type="submit" value="Regresar" id="btnRegresarIndex" class="btn btn-raised btn-primary float-left" formaction="Index" />
+                            <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" formaction="Index" />
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
